# token_grab_rust

./: .gitignore  Cargo.toml  README.md
src/: exfiltrator.rs  extractor.rs  injector.rs  main.rs  obfuscation.rs  utils.rs
web_interface/: docker-compose.yml  test_webhook.py
web_interface/data/: data.json
web_interface/public/: index.php  webhook.php
