[package]
name = "token_grab_rust"
version = "1.0.0"
edition = "2021"
authors = ["VullWen", "GoldFire94"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7"
sysinfo = "0.26"

[build-dependencies]
cc = "1.0"